--- a/bbetsSave/BBets.tex
+++ b/bbetsSave/BBets.tex
@@ -25,7 +25,7 @@
 \usepackage{hyperref}
 \hypersetup{unicode=true,
             pdftitle={Brownlows Bets},
-            pdfauthor={Michelle McIntyre},
+            pdfauthor={Your Name},
             pdfborder={0 0 0},
             breaklinks=true}
 \urlstyle{same}  % don't use monospace font for urls
@@ -117,12 +117,12 @@
   \title{Brownlows Bets}
     \pretitle{\vspace{\droptitle}\centering\huge}
   \posttitle{\par}
-    \author{Michelle McIntyre}
+    \author{Your Name}
     \preauthor{\centering\large\emph}
   \postauthor{\par}
       \predate{\centering\large\emph}
   \postdate{\par}
-    \date{9/13/2019}
+    \date{Year 2019}
 
 
 \begin{document}
@@ -133,7 +133,7 @@
 \tableofcontents
 }
 \hypertarget{section}{%
-\subsubsection{2019-09-13}\label{section}}
+\subsubsection{2019-09-06}\label{section}}
 
 \hypertarget{introduction}{%
 \section{Introduction}\label{introduction}}
@@ -179,7 +179,7 @@ markdown document
 \end{Shaded}
 
 \begin{verbatim}
-## [1] 13.70346
+## [1] 13.8315
 \end{verbatim}
 
 \hypertarget{confidence-interval-of-brownlows-earning}{%
