--- a/bbetsSave/BBets.Rmd
+++ b/bbetsSave/BBets.Rmd
@@ -1,10 +1,12 @@
 ---
 title: "Brownlows Bets"
 author: "Michelle McIntyre"
-date: "9/13/2019"
+date: "Year 2019"
 output:
   html_document:
     number_sections: yes
+    toc: yes
+  pdf_document:
     toc: yes
 ---
 
@@ -18,7 +20,7 @@ require(tidyverse)
 
 ```
 
-
+ 
 
 <!-- We recommend you use git branches -- create a separate branch for each major section i.e. Introduction, Methods, Results, Inferential Results, and Discussion and Conclusions - leave the YAML block untouched until the final merge where you put in your own name !-->
 
@@ -26,7 +28,7 @@ require(tidyverse)
 
 <!--In this section you explain what you are trying to show.  Where did the data come from?  What is the research or other question you are trying to answer?!-->
 
- At the first day of class there are 35 students in Math Statistics class and professor Brownlow always proposes this bet to his students "I will wager $2 to your bet of $1 that at least two people in today's class have  the same birthday.  He tells me he has made that bet 11 times so far. Where do you think his profits/losses are? Discuss this in a markdown document
+ At the first day of class there are 30 students in Math Statistics class and professor Brownlow always proposes this bet to his students "I will wager $2 to your bet of $1 that at least two people in today's class have  the same birthday.  He tells me he has made that bet 11 times so far. Where do you think his profits/losses are? Discuss this in a markdown document
 
 # Methods
 
@@ -43,7 +45,7 @@ varstor=numeric()
 for (j in 1:repeatn){
 brownlow = 0
 for (i in 1:count) {
-  sam=sample(days,size=34,replace = T)
+  sam=sample(days,size=30,replace = T)
   y=duplicated(sam)
   if (sum(y)>0) brownlow=brownlow+1
   else brownlow = brownlow - 2
@@ -51,22 +53,24 @@ for (i in 1:count) {
 varstor[j]=brownlow
 }
 hist(varstor)
-var(varstor) 
-print(paste('average return = ', mean(varstor)))
+var(varstor)
+print(paste ("average return = ", mean(varstor)))
 
-sort(Varstor)
-
-
-
+      
 ```
 
 
 <!--Explain and display the results of your method of coming up with the estimate of professor Brownlows betting!-->
-
+we used a Histogram and we used the mean.
+```{r}
+vSorted = sort(varstor)
+print(vSorted[100])
+print(vSorted[900])
+```
 
 # Confidence interval of Brownlows earning
 
-<!--Explain and display your method of coming up with a 95% confidence interval of  professor Brownlows-->
+<!--Explain and display your method of coming up with a 90% confidence interval of  professor Brownlows-->
 
 
 # Discussion and Conclusion
